<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bee Sink</string>
    <string name="hello_main">Beeman\'s KitchenSink</string>
    <string name="hello_simple">Simple Activity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_beer_list">Beers</string>
    <string name="title_beer_detail">Beer Detail</string>
    <string name="button_count">Count</string>
    <string name="button_beer_list">Beer List</string>
    <string name="button_test">Test</string>
    <string name="button_load_beers">Load beers</string>
    <string name="title_activity_beer">BeerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beer_add">BeerAddActivity</string>
    <string name="save">Save</string>
    <string name="beer_name">Name</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="homepage">Homepage</string>
    <string name="country">Country</string>

</resources>